# personal-experiments

./: .env.template  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  ruff.toml
pyprojects/pyderivehelper/: README.md  config.yaml  help_message.md  pyproject.toml
pyprojects/pyderivehelper/notebooks/: 00_introduction.ipynb
pyprojects/pyderivehelper/src/pyderivehelper/: __init__.py  agents.py  config_file_management.py  config_openai.py  config_wl.py  openai_api.py  prompt_handler.py  prompts.py  system_prompts.py  wlconfig.py  wltools.py
scripts/: kill_wolfram_kernels.sh  rm_throwaway_images.sh
throwaway/: 2026-03-17_test_wolfram_nlp.ipynb
throwaway/jupyter/: 2025-03-16_test_wolfram_interfaces.ipynb  2026-03-14_test_sgn_expansion.ipynb  2026-03-16_test_wolfram_interfaces.ipynb  2026-03-17_test_wolfram_nlp.ipynb  2026-03-19_test_wolfram_nlp_interfaces.ipynb  2026-03-27_sgn_integrals.ipynb  2026-04-02_sgn_power.ipynb  2026-04-03_test_slash_commands.ipynb  2026-04-05_fourier_hilbert_hankel.ipynb  2026-05-06_discrete_derivatives.ipynb
